# PulmoRisk

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  features.json  pulmorisk-mac.spec  pulmorisk-windows.spec  pulmorisk.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build.py  build_linux.sh
src/app/: main.py
src/app/assets/themes/: BlueEmber.json  HungLab.json
src/app/config/: settings.py  version.py
src/app/controllers/: app_controller.py  base_controller.py  integral_controller.py  main_controller.py  menubar_controller.py  sybil_controller.py
src/app/models/: individual_model.py  patient_model.py
src/app/utils/: event_bus.py  helpers.py  integral_inference.py  integral_predict.R  sybil_inference.py  ui_config.py  validators.py
src/app/views/: integral_view.py  main_view.py  main_window.py  splash_screen.py  sybil_view.py
src/app/views/components/: loading_overlay.py  log_panel.py  menu_bar.py  side_bar.py  split_view.py
src/app/views/dialogs/: info_dialog.py
tests/: test_app_controller.py  test_base_controller.py  test_controller.py  test_event_bus.py  test_individual_model.py  test_menubar_controller.py  test_patient_model.py  test_smoke.py  test_sybil_controller.py  test_sybil_epi.py  test_validators.py
