[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PulmoRisk"
version = "1.1.5"
description = "A custom tkinter application"
requires-python = ">=3.10,<3.14.1"
dependencies = [
    "customtkinter>=5.2.0",
    "pandas<2.0",
    "Pillow>=12.2.0",
    "sybil @ git+https://github.com/reginabarzilaygroup/Sybil.git@v1.6.0",
    "torch==1.13.1+cpu",
    "torchvision==0.14.1+cpu",    
    
    # PyRadiomics stack
    "docopt==0.6.2",
    "lazy-loader==0.5",
    "networkx==3.4.2",
    "packaging==26.2",
    "pillow==12.2.0",
    "pykwalify==1.8.0",
    "pyradiomics==3.0.1",
    "python-dateutil==2.9.0.post0",
    "PyWavelets==1.8.0",
    "ruamel.yaml==0.19.1",
    "scikit-image<0.23",
    "scipy==1.13.1",
    "simpleitk==2.5.5",
    "six==1.17.0",
    "tifffile==2024.8.30",
    "trimesh==3.23.5",
    "versioneer==0.29"
]

[tool.uv]
override-dependencies = [
    "torch==1.13.1+cpu; sys_platform != 'darwin'",
    "torchvision==0.14.1+cpu; sys_platform != 'darwin'",
    "torch==1.13.1; sys_platform == 'darwin'",
    "torchvision==0.14.1; sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.extra-build-dependencies]
pyradiomics = ["numpy<2"]

[tool.hatch.metadata]
# Required to allow git+https:// direct references in project.dependencies
# (e.g. the Sybil dependency). Hatchling blocks these by default.
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["src/app"]


[project.scripts]
PulmoRisk = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.8",
    "pyinstaller>=6.0.0",
]

# -----------------------------
# Ruff configuration (ONLY HERE)
# -----------------------------
[tool.ruff]
line-length = 88
# Fix: was "py312" but requires-python caps at <3.11, so this must be py310
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
    "A", "ARG", "SIM", "TCH", "PLC", "PIE",
    "RET", "RUF"
]

ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
    "B006",
    "C408",
    "ARG001",
    "ARG002",
    "SIM108",
    "RUF012",
    "RUF013",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG001", "ARG002", "PLR2004"]
"scripts/**/*.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
